Address review comments
Signed-off-by: Yannick Schaus <github@schaus.net>